styles/index-small.css
/* meow */

:root {
    --the-red: #8C3324;
    --the-dark-red: #541f16;
    --the-white: #F9F5EC;
    --the-black: #333745;
}

* {
    margin: 0;
    font-family: Lato;
}

header {
    background-color: var(--the-black);
    color: var(--the-white);
    display: grid;
    grid-template-columns: 24px auto 44px;
    max-width: 800px;
    padding: 0.5rem 0 0.5rem 0;
    column-gap: 20px;
    font-size: 1.2rem;
    align-items: end;
}

header img {
    display: block;
    width: 100%;
    height: auto;
    padding-left: 10px;
}

.hamburger {
    border: none;
    background-color: inherit;
    color: var(--the-white);
    cursor: pointer;
}

.hamburger::before {
    content: "\2630";
    font-size: 1.4rem;
}

.hamburger.show::before {
    content: "\00D7";
    font-size: 2rem;
}

.navigation {
    background-color: var(--the-red);
    display: none;
    max-width: 800px;
}

.navigation.show {
    display: block;
}

.navigation a {
    text-decoration: none;
    color: inherit;
    padding-left: 10px;
    line-height: 44px;
}

.navigation ul {
    padding: 0;
}

.navigation li {
    list-style: none;
    border-top: 1px solid var(--the-white);
    text-align: left;
    color: var(--the-white);
    cursor: pointer;
    height: 44px;
}

.navigation li:hover {
    background-color: var(--the-white);
    color: var(--the-red);
}

.navigation li.current {
    background-color: var(--the-dark-red);
}

.navigation li.current:hover {
    background-color: var(--the-white);
    color: var(--the-red);
}

h1 {
    padding-left: 10px;
}

.section-grid {
    display: grid;
    grid-template-columns: 1fr;
    max-width: 800px;
}

.section-grid section {
    margin: 10px;
    background-color: var(--the-red);
    color: var(--the-white);
    line-height: 1.4rem;
}

section:nth-child(3) {
    background-color: inherit;
}

.section-grid section:nth-child(2) {
    text-align: center;
}

.section-grid h2 {
    background-color: var(--the-black);
    padding: 10px;
}

.section-grid p,
.section-grid img {
    padding: 10px;
}

.button-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-content: space-around;
}

.button-grid button {
    margin: 5px;
    border: 2px solid var(--the-black);
    border-radius: 6px;
    background: linear-gradient(var(--the-red), var(--the-dark-red));
    color: var(--the-white);
    cursor: pointer;
    height: 44px;
}

.button-grid button:hover {
    background: var(--the-white);
    color: var(--the-dark-red);
}

/* .button-grid button.selected {
    stuff here
} */

.course-grid {
    display: grid;
    grid-template-columns: 1fr;
}

.course-card {
    margin: 5px;
    text-align: center;
    border: 1px solid var(--the-black);
    color: var(--the-black);
    background-color: var(--the-white);
    padding: 0.25rem 0;
}

.course-card.completed {
    background-color: var(--the-black);
    color: var(--the-white);
}

.num-credits-desc {
    color: var(--the-black);
    text-align: center;
}

footer {
    background-color: var(--the-black);
    color: var(--the-white);
    text-align: center;
}

.icon-flexbox {
    padding: 10px 0;
    display: flex;
    gap: 20px;
    justify-content: center;
}

.icon-flexbox img {
    height: 44px;
    width: auto;
}

footer p {
    padding: 0.2rem 0;
}

